--- a/cart.html
+++ b/cart.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Store</title>
+    <title>Cart - My Store</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
-        <h1>Welcome to My Store!</h1>
+        <h1>Your Cart</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="products.html">Products</a>
@@ -17,8 +18,9 @@
     </header>
 
     <div class="container">
-        <h2>Coming soon!</h2>
-        <p>Check out our products page to see what’s available.</p>
+        <ul id="cart-items"></ul>
+        <p>Total: €<span id="cart-total">0</span></p>
+        <button onclick="checkout()">Checkout</button>
     </div>
 </body>
 </html>
