--- a/products/product3.html
+++ b/products/product3.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product 1 - My Store</title>
+    <title>Product 3 - My Store</title>
     <link rel="stylesheet" href="../styles.css">
     <script src="../script.js" defer></script>
 </head>
 <body>
 <header>
-    <h1>Product 1</h1>
+    <h1>Product 3</h1>
     <nav>
         <a href="../index.html">Home</a>
         <a href="../products.html">Products</a>
@@ -21,7 +21,7 @@
 
 <div class="container product-detail">
     <div class="product-info-left">     <!-- LEFT: Description -->
-        <h2>Death Mask</h2>
+        <h2>CASH-White</h2>
         <p>
             This is a great product that comes in multiple sizes.
             High-quality print, comfortable fit, and durable fabric.
@@ -29,10 +29,10 @@
     </div>
 
     <div class="product-image">     <!-- CENTER: Image Gallery -->
-        <img id="main-image" src="images/FINISH10.png" alt="Death Mask">
+        <img id="main-image" src="images/FINISH5.png" alt="CASH-White">
 
         <div class="thumbnails">
-            <img src="images/FINISH10.png" onclick="changeImage(this)">
+            <img src="images/FINISH5.png" onclick="changeImage(this)">
             <img src="images/FINISH-BlankWhiteBack.png" onclick="changeImage(this)">
         </div>
     </div>
@@ -58,7 +58,7 @@
 
         <input type="hidden" id="size" value="S">
 
-        <button onclick="addProductFromPage('Death Mask', 30.00, 'products/images/FINISH10.png')">
+        <button onclick="addProductFromPage('CASH-White', 30.00, 'products/images/FINISH5.png')">
             Add to Cart
         </button>
     </div>
