--- a/cart.html
+++ b/cart.html
@@ -30,7 +30,7 @@
     <div class="container">
         <ul id="cart-items"></ul>
         <p>Total: €<span id="cart-total">0</span></p>
-        <button onclick="checkout()">Checkout</button>
+        <button class="checkoutbutton" onclick="checkout()">Checkout</button>
     </div>
 </body>
 </html>
