--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Store</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#000000">
     <script src="script.js" defer></script>
 </head>
 
@@ -57,6 +59,7 @@
         setInterval(updateSideWeather, 10 * 60 * 1000); // update every 10 min
         */
         // ENTER STORE click
+
         document.getElementById("enter-text").addEventListener("click", () => {
             window.location.href = "products.html";
         });
