--- a/products/product1.html
+++ b/products/product1.html
@@ -11,9 +11,19 @@
 <header>
     <h1>Product 1</h1>
     <nav>
+        <form id="search-form" action="search.html" method="get">
+            <div class="search-wrapper">
+                <img class="search-icon" src="images/magnifying-glass-9-svgrepo-com.svg" alt="Search">
+                <input type="text" name="q" placeholder="Search" required>
+            </div>
+        </form>
+
         <a href="../index.html">Home</a>
         <a href="../products.html">Products</a>
-        <a href="../cart.html">Cart</a>
+        <a href="../cart.html" id="cart-link">
+            <img id="cart-icon" src="images/shopping-cart-free-5-svgrepo-com.svg" alt="Cart">
+            Cart (<span id="cart-count">0</span>)
+        </a>
     </nav>
 </header>
 
@@ -45,10 +55,11 @@
             <button class="size-btn" data-size="S">S</button>
             <button class="size-btn" data-size="M">M</button>
             <button class="size-btn" data-size="L">L</button>
+            <button class="size-btn" data-size="XL">XL</button>
         </div>
 
         <div class="quantity-selector">
-            <span>Quantity:</span>
+            <span class="qty-label">Quantity: </span>   <!-- wrap label -->
             <div class="qty-controls">
                 <button type="button" class="qty-btn" onclick="changeQty(-1)">−</button>
                 <span id="qty-value">1</span>
@@ -58,7 +69,7 @@
 
         <input type="hidden" id="size" value="S">
 
-        <button onclick="addProductFromPage('Death Mask', 30.00, 'products/images/FINISH10.png')">
+        <button class="addtocartbutton" onclick="addProductFromPage('Death Mask', 30.00, 'products/images/FINISH10.png')">
             Add to Cart
         </button>
     </div>
