--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
         // ENTER STORE click
 
         document.getElementById("enter-text").addEventListener("click", () => {
-            window.location.href = "products.html";
+            window.location.href = "new.html";
         });
 
         // ENTER key support
         document.addEventListener("keydown", (e) => {
             if (e.key === "Enter") {
-                window.location.href = "products.html";
+                window.location.href = "new.html";
             }
         });
     </script>
