--- a/products/product3.html
+++ b/products/product3.html
@@ -11,67 +11,80 @@
 <header>
     <h1>Product 3</h1>
     <nav>
-        <form id="search-form" action="search.html" method="get">
-            <div class="search-wrapper">
+        <form id="search-form" action="../search.html" method="get">
+            <div class="search-wrapper"id="mobile-search">
                 <img class="search-icon" src="images/magnifying-glass-9-svgrepo-com.svg" alt="Search">
                 <input type="text" name="q" placeholder="Search" required>
             </div>
         </form>
 
+        <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+
         <a href="../index.html">Home</a>
-        <a href="../products.html">Products</a>
         <a href="../cart.html" id="cart-link">
             <img id="cart-icon" src="images/shopping-cart-free-5-svgrepo-com.svg" alt="Cart">
-            Cart (<span id="cart-count">0</span>)
+            Cart <span id="cart-count">0</span>
         </a>
     </nav>
 </header>
 
 <div id="toast"></div>
 
-<div class="container product-detail">
-    <div class="product-info-left">     <!-- LEFT: Description -->
-        <h2>CASH-White</h2>
-        <p>
-            This is a great product that comes in multiple sizes.
-            High-quality print, comfortable fit, and durable fabric.
-        </p>
+<div class="shop-layout">
+
+    <div class="left-links">
+        <a href="../new.html">New</a>
+        <a href="../tshirts.html">T-Shirts</a>
+        <a href="../pants.html">Pants</a>
+        <a href="../shorts.html">Shorts</a>
+        <a href="../tos.html" class="bottom-link">Terms of Service</a>
     </div>
 
-    <div class="product-image">     <!-- CENTER: Image Gallery -->
-        <img id="main-image" src="images/FINISH5.png" alt="CASH-White">
+    <div class="container product-detail">
 
-        <div class="thumbnails">
-            <img src="images/FINISH5.png" onclick="changeImage(this)">
-            <img src="images/FINISH-BlankWhiteBack.png" onclick="changeImage(this)">
-        </div>
-    </div>
-
-    <div class="product-info-right">     <!-- RIGHT: Purchase -->
-        <p class="price">€30.00</p>
-
-        <div class="size-selector">
-            <span>Select Size:</span>
-            <button class="size-btn" data-size="S">S</button>
-            <button class="size-btn" data-size="M">M</button>
-            <button class="size-btn" data-size="L">L</button>
-            <button class="size-btn" data-size="XL">XL</button>
+        <div class="product-info-left">     <!-- LEFT: Description -->
+            <h2>CASH-White</h2>
+            <p>
+                This is a great product that comes in multiple sizes.
+                High-quality print, comfortable fit, and durable fabric.
+            </p>
         </div>
 
-        <div class="quantity-selector">
-            <span>Quantity:</span>
-            <div class="qty-controls">
-                <button type="button" class="qty-btn" onclick="changeQty(-1)">−</button>
-                <span id="qty-value">1</span>
-                <button type="button" class="qty-btn" onclick="changeQty(1)">+</button>
+        <div class="product-image">     <!-- CENTER: Image Gallery -->
+            <img id="main-image" src="images/FINISH5.png" alt="CASH-White">
+
+            <div class="thumbnails">
+                <img src="images/FINISH5.png" onclick="changeImage(this)">
+                <img src="images/FINISH-BlankWhiteBack.png" onclick="changeImage(this)">
             </div>
         </div>
 
-        <input type="hidden" id="size" value="S">
+        <div class="product-info-right">     <!-- RIGHT: Purchase -->
+            <p class="price">€30.00</p>
 
-        <button class="addtocartbutton" onclick="addProductFromPage('CASH-White', 30.00, 'products/images/FINISH5.png')">
-            Add to Cart
-        </button>
+            <div class="size-selector">
+                <span>Size:</span>
+                <button class="size-btn" data-size="S">S</button>
+                <button class="size-btn" data-size="M">M</button>
+                <button class="size-btn" data-size="L">L</button>
+                <button class="size-btn" data-size="XL">XL</button>
+            </div>
+
+            <div class="quantity-selector">
+                <span>Quantity: </span>
+                <div class="qty-controls">
+                    <button type="button" class="qty-btn" onclick="changeQty(-1)">−</button>
+                    <span id="qty-value">1</span>
+                    <button type="button" class="qty-btn" onclick="changeQty(1)">+</button>
+                </div>
+            </div>
+
+            <input type="hidden" id="size" value="S">
+
+            <button class="addtocartbutton" onclick="addProductFromPage('CASH-White', 30.00, 'products/images/FINISH5.png')">
+                Add to Cart
+            </button>
+        </div>
     </div>
 </div>
 
