--- a/search.html
+++ b/search.html
@@ -8,17 +8,43 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+
 <header>
     <h1>Search Results</h1>
-    <a href="./products.html">← Back to Products</a>
+    <nav>
+        <form id="search-form" action="search.html" method="get">
+            <div class="search-wrapper">
+                <img class="search-icon" src="products/images/magnifying-glass-9-svgrepo-com.svg" alt="Search">
+                <input type="text" name="q" placeholder="Search" required>
+            </div>
+        </form>
+
+        <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+        
+        <a href="./index.html">Home</a>
+        <a href="./cart.html" id="cart-link">
+            <img id="cart-icon" src="products/images/shopping-cart-free-5-svgrepo-com.svg" alt="Cart">
+            Cart <span id="cart-count">0</span>
+        </a>
+    </nav>
 </header>
 
-<div class="container" id="search-results">
-    <!-- JS will populate matching products here -->
+<div class="shop-layout">
+
+    <div class="left-links">
+        <a href="new.html">New</a>
+        <a href="tshirts.html">T-Shirts</a>
+        <a href="pants.html">Pants</a>
+        <a href="shorts.html">Shorts</a>
+        <a href="tos.html">Terms of Service</a>
+    </div>
+
+    <div class="container" id="search-results">
+        <!-- JS will populate matching products here -->
+    </div>
 </div>
 
 <script>
-    // Sample product data (same as in products.html)
     const products = [
         { name: "Death Mask", price: 30.00, image: "products/images/FINISH10.png", link: "products/product1.html" },
         { name: "314", price: 30.00, image: "products/images/FINISH11.png", link: "products/product2.html" },
@@ -44,10 +70,15 @@
         matches.forEach(p => {
             const div = document.createElement("div");
             div.className = "product";
+            div.setAttribute("data-name", p.name);
+            div.setAttribute("data-price", p.price.toFixed(2));
+            div.setAttribute("data-image", p.image);
+            div.setAttribute("data-category", "tshirt"); // or dynamic if you have category
 
             div.innerHTML = `
                 <a href="${p.link}">
                     <img src="${p.image}" alt="${p.name}" width="200">
+                    <img class="hover-img" src="products/images/FINISH-BlankWhiteBack.png" alt="${p.name} Hover">
                     <h3>${p.name}</h3>
                 </a>
                 <p>€${p.price.toFixed(2)}</p>
