--- a/cart.html
+++ b/cart.html
@@ -42,7 +42,7 @@
         <ul id="cart-items"></ul>
         <div id="cart-total-container">
             <p>Total: €<span id="cart-total">0</span></p>
-            <button class="checkoutbutton" onclick="checkout()">Checkout</button>
+            <button onclick="checkout()">Checkout</button>
         </div>
     </div>
 </div> 
