--- a/success.html
+++ b/success.html
@@ -9,32 +9,15 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-<header>
-    <h1>Shorts</h1>
-    <nav>
-        <form id="search-form" action="search.html" method="get">
-            <div class="search-wrapper">
-                <img class="search-icon" src="products/images/magnifying-glass-9-svgrepo-com.svg" alt="Search">
-                <input type="text" name="q" placeholder="Search" required>
+
+<div class="container">
+    <div class="confirmation">
+        <h1>Your Order was received and will be shipped soon.</h1>
+            <div id="order-details">
+                <p>Loading your order...</p>
             </div>
-        </form>
-
-        <button class="menu-toggle" onclick="toggleMenu()">☰</button>
-
-        <a href="./index.html">Home</a>
-        <a href="./cart.html" id="cart-link">
-            <img id="cart-icon" src="products/images/shopping-cart-free-5-svgrepo-com.svg" alt="Cart">
-            Cart <span id="cart-count">0</span>
-        </a>
-    </nav>
-</header>
-
-<div class="confirmation">
-    <h1>Thank you for your order! 🎉</h1>
-        <div id="order-details">
-            <p>Loading your order...</p>
-        </div>
-    <a href="new.html"><button>Continue Shopping</button></a>
+        <a href="new.html"><button>Continue Shopping</button></a>
+    </div>
 </div>
 
 </body>
