--- a/success.html
+++ b/success.html
@@ -10,14 +10,15 @@
 </head>
 <body>
 
-<div class="container">
-    <div class="confirmation">
-        <h1>Your Order was received and will be shipped soon.</h1>
-            <div id="order-details">
-                <p>Loading your order...</p>
-            </div>
-        <a href="new.html"><button>Continue Shopping</button></a>
-    </div>
+<div class="shop-layout">
+    <div class="container">
+        <div class="confirmation">
+            <h1>Your Order was received and will be shipped soon!</h1>
+                <div id="order-details">
+                    <p>Loading your order...</p>
+                </div>
+            <a href="new.html"><button>Continue Shopping</button></a>
+        </div>
 </div>
 
 </body>
