--- a/tshirts.html
+++ b/tshirts.html
@@ -104,6 +104,33 @@
             <p>€30.00</p>
         </div>  
 
+        <div class="product" data-name="One Pound - 2" data-price="30.00" data-image="products/images/FINISH4.png" data-category="tshirt">
+            <a href="products/product8.html">
+                <img src="products/images/FINISH4.png" alt="Product 8" width="200">
+                <img class="hover-img" src="products/images/FINISH-BlankBlackBack.png" alt="Product 8 Hover">
+                <h3> One Pound - 2 </h3>
+            </a>
+            <p>€30.00</p>
+        </div>  
+
+        <div class="product" data-name="Satellite Nile Delta" data-price="30.00" data-image="products/images/FINISH8.png" data-category="tshirt">
+            <a href="products/product9.html">
+                <img src="products/images/FINISH8.png" alt="Product 9" width="200">
+                <img class="hover-img" src="products/images/FINISH-BlankBlackBack.png" alt="Product 9 Hover">
+                <h3> Satellite </h3>
+            </a>
+            <p>€30.00</p>
+        </div>  
+
+        <div class="product" data-name="Death Mask - 2" data-price="30.00" data-image="products/images/FINISH9.png" data-category="tshirt">
+            <a href="products/product10.html">
+                <img src="products/images/FINISH9.png" alt="Product 10" width="200">
+                <img class="hover-img" src="products/images/FINISH-BlankWhiteBack.png" alt="Product 10 Hover">
+                <h3> Death Mask - 2 </h3>
+            </a>
+            <p>€30.00</p>
+        </div>  
+
     </div>
 </div>
 
