--- a/success.html
+++ b/success.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="./styles.css">
     <script defer src="success.js"></script>
     <script src="./script.js" defer></script>
+    
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            clearCart();   // ← THIS is where it goes
+        });
+    </script>
+
 </head>
 <body>
 
