--- a/pants.html
+++ b/pants.html
@@ -36,6 +36,7 @@
         <a href="pants.html">Pants</a>
         <a href="shorts.html">Shorts</a>
         <a href="tos.html">Terms of Service</a>
+        <a href="index.html">Home</a>
     </div>
 
     <div class="container">
