--- a/products/product8.html
+++ b/products/product8.html
@@ -37,12 +37,13 @@
         <a href="../tshirts.html">T-Shirts</a>
         <a href="../pants.html">Pants</a>
         <a href="../shorts.html">Shorts</a>
+        <a href="../index.html">Home</a>
         <a href="../tos.html" class="bottom-link">Terms of Service</a>
     </div>
 
     <div class="container product-detail">
         <div class="product-info-left">     <!-- LEFT: Description -->
-            <h2>Chanel</h2>
+            <h2>One Pound - 2</h2>
             <p>
                 This is a great product that comes in multiple sizes.
                 High-quality print, comfortable fit, and durable fabric.
@@ -80,7 +81,7 @@
 
             <input type="hidden" id="size" value="S">
 
-            <button class="addtocartbutton" onclick="addProductFromPage('Chanel', 30.00, 'products/images/FINISH3.png')">
+            <button class="addtocartbutton" onclick="addProductFromPage('One Pound - 2', 30.00, 'products/images/FINISH4.png')">
                 Add to Cart
             </button>
         </div>
