--- a/new.html
+++ b/new.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header>
-    <h1>All Products</h1>
+    <h1>314 Store Cairo, EGY</h1>
     <nav>
         <form id="search-form" action="search.html" method="get">
             <div class="search-wrapper" id="mobile-search">
@@ -35,6 +35,7 @@
         <a href="tshirts.html">T-Shirts</a>
         <a href="pants.html">Pants</a>
         <a href="shorts.html">Shorts</a>
+        <a href="index.html">Home</a>
         <a href="tos.html">Terms of Service</a>
     </div>
 
