--- a/products/product7.html
+++ b/products/product7.html
@@ -37,6 +37,7 @@
         <a href="../tshirts.html">T-Shirts</a>
         <a href="../pants.html">Pants</a>
         <a href="../shorts.html">Shorts</a>
+        <a href="../index.html">Home</a>
         <a href="../tos.html" class="bottom-link">Terms of Service</a>
     </div>
 
