--- a/cart.html
+++ b/cart.html
@@ -45,8 +45,11 @@
             <p>Total: €<span id="cart-total">0</span></p>
             <button onclick="checkout()">Checkout</button>
         </div>
+        <div id="paypal-button-container"></div>
     </div>
 </div> 
+
+<script src="https://www.paypal.com/sdk/js?client-id=YOUR_CLIENT_ID&currency=EUR"></script>
 
 </body>
 </html>
